--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 
 <body>
     <h1>Something will eventually be here.</h1>
+    <a href="http://127.0.0.1:5500/marshall-at-home/quiz.html">quiz</a>
 </body>
 </html>
