begin work on user account system + other stuff

--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="css/styles.css?v=1.0">
     <script type="text/javascript" src="scripts/quiz.js"></script>
 
-    <script src="jquery-3.5.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    
     <style>
         .answer {
             margin-right: 10px;
@@ -28,6 +30,7 @@
 
     </div>
     <button id="selectAns" onclick="lockQuestion()">select answer</button>
+    <button id="testNext" onclick="loadNext()">Load Next</button>
 </body>
 
 </html>
