--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -9,11 +10,22 @@
   <meta name="author" content="kimak">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
-
+  <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
+  <script src="/scripts/index.js"></script>
 </head>
 
-<body>
-    <h1>Something will eventually be here.</h1>
-    <a href="http://127.0.0.1:5500/marshall-at-home/quiz.html">quiz</a>
+<body onload="signInMessage()">
+  <h1 id="signInBanner"></h1>
+  <div id="logInOutDiv">
+    <button id="logInOrOut">Log In</button>
+  </div>
+  <h1>Something will eventually be here.</h1>
+  <a href="http://127.0.0.1:5500/quiz.html">quiz</a>
+  <div id="app"></div>
+
+
+
+  <script src="test.js"></script>
 </body>
+
 </html>
