--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <link rel="stylesheet" href="css/styles.css?v=1.0">
     <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
     <script src="/scripts/index.js"></script>
+    
+    <script src="/scripts/signinlogic.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 
-<body onload="signInMessage()">
+<body onload="signInLogic()">
     <h1 id="signInBanner"></h1>
     <div id="logInOutDiv">
         <button id="logInOrOut">Log In</button>
@@ -28,6 +30,9 @@
 
 
     <script src="test.js"></script>
+    <script>
+        signInMessage();
+    </script>
 </body>
 
 </html>
