--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/styles.css?v=1.0">
     <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
     <script src="/scripts/login.js"></script>
+    <script src="/scripts/signinlogic.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
