--- a/quiz.html
+++ b/quiz.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="css/styles.css?v=1.0">
     <script type="text/javascript" src="scripts/quiz.js"></script>
+    
+    <script src="/scripts/signinlogic.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -23,7 +25,7 @@
 
 </head>
 
-<body onload="getData()">
+<body onload="signInLogic()">
     <h1>Something.</h1>
     <h2>Question number</h2>
     <div id="qnBody">
