update login to use email

--- a/quiz.html
+++ b/quiz.html
@@ -35,7 +35,7 @@
         signInLogic();
     </script>
     <button id="selectAns" onclick="lockQuestion()">select answer</button>
-    <button id="testNext" onclick="loadNext()">Load Next</button>
+    <!-- <button id="testNext" onclick="loadNext()">Load Next</button> -->
 </body>
 
 </html>
