--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
     <div class="main">
         <p class="sign">Sign in</p>
         <form class="form1">
-            <input id="username" class="username" type="text" placeholder="Username">
+            <input id="email" class="email" type="text" placeholder="Email Address">
             <input id="password" class="pass" type="password" placeholder="Password">
             <input id="keepSignedIn" type="checkbox">
             <label for="keepsignedin">Sign In automatically</label><br>
