add question tracking

--- a/quiz.html
+++ b/quiz.html
@@ -28,8 +28,8 @@
 <body onload="getData()">
     <h1>Something.</h1>
     <h2>Question number</h2>
+    <div id="checkmark"></div>
     <div id="qnBody">
-
     </div>
     <script>
         signInLogic();
