--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="css/styles.css?v=1.0">
     <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
-    <script src="/scripts/index.js"></script>
+    <script src="/scripts/profile.js"></script>
     
     <script src="/scripts/signinlogic.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -19,16 +19,15 @@
 </head>
 
 <body onload="signInLogic()">
-    <h1 id="signInBanner"></h1>
-    <div id="logInOutDiv">
-        <button id="logInOrOut">Log In</button>
-    </div>
-    <h1>Something will eventually be here.</h1>
-    <a href="http://127.0.0.1:5500/quiz.html">quiz</a>
-    <div id="app"></div>
+    <h1 id="profileName">asdasd</h1>
+    <h2 id="email">asdasd</h2>
 
+
+    <div id="quizHistoryTable">
+
+    </div>
     <script>
-        signInMessage();
+        getHistory();
     </script>
 </body>
 
