logging of quiz answers in profile

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <div id="logInOutDiv">
         <button id="logInOrOut">Log In</button>
     </div>
+    
+    <a href="http://127.0.0.1:5500/profile.html">profile</a>
     <h1>Something will eventually be here.</h1>
     <a href="http://127.0.0.1:5500/quiz.html">quiz</a>
     <div id="app"></div>
