--- a/profile.html
+++ b/profile.html
@@ -20,11 +20,9 @@
 
 <body onload="signInLogic()">
     <h1 id="profileName">asdasd</h1>
-    <h2 id="email">asdasd</h2>
-
+    <h2 id="nameOfUser">asdasd</h2>
 
     <div id="quizHistoryTable">
-
     </div>
     <script>
         getHistory();
