prep unit test login

--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
             <input id="password" class="pass" type="password" placeholder="Password">
             <input id="keepSignedIn" type="checkbox">
             <label for="keepsignedin">Sign In automatically</label><br>
+            <div id="error"></div>
             <a class="submit" onclick="signIn()">Sign in</a>
             <!-- <p class="forgot"><a href="#">Forgot Password?</p> -->
 
