--- a/login.html
+++ b/login.html
@@ -1,38 +1,106 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Marshall@Home &mdash; Login</title>
 
-<head>
-    <meta charset="utf-8">
+    <!--CSS-->
+    <link rel="stylesheet" type="text/css" href="css/login.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
 
-    <title>Marshall@Home</title>
-    <meta name="description" content="Niama">
-    <meta name="author" content="kimak">
-
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
+    <!--Scripts-->
     <script src="/scripts/login.js"></script>
     <script src="/scripts/signinlogic.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
+  </head>
+  <body class="login-page">
+    <section class="h-100">
+      <div class="container h-100">
+        <div class="row justify-content-center align-items-center h-100">
+          <div class="card-wrapper">
+            <div class="logo">
+              <img src="images/logo.png" alt="logo" />
+            </div>
+            <div class="card fat">
+              <div class="card-body">
+                <h4 class="card-title">Login</h4>
+                <form method="" class="my-login-validation" novalidate="">
+                  <div class="form-group">
+                    <label for="email">E-Mail Address</label>
+                    <input
+                      id="email"
+                      type="email"
+                      class="form-control"
+                      name="email"
+                      value=""
+                      required
+                      autofocus
+                    />
+                    <div class="invalid-feedback">Email is invalid</div>
+                  </div>
 
-<body>
-    <div class="main">
-        <p class="sign">Sign in</p>
-        <form class="form1">
-            <input id="email" class="email" type="text" placeholder="Email Address">
-            <input id="password" class="pass" type="password" placeholder="Password">
-            <input id="keepSignedIn" type="checkbox">
-            <label for="keepsignedin">Sign In automatically</label><br>
-            <div id="error"></div>
-            <a class="submit" onclick="signIn()">Sign in</a>
-            <!-- <p class="forgot"><a href="#">Forgot Password?</p> -->
+                  <div class="form-group">
+                    <label for="password"
+                      >Password
+                      <a href="forgot.html" class="float-right">
+                        Forgot Password?
+                      </a>
+                    </label>
+                    <input
+                      id="password"
+                      type="password"
+                      class="form-control"
+                      name="password"
+                      required
+                      data-eye
+                    />
+                    <div class="invalid-feedback">Password is required</div>
+                  </div>
 
+                  <div class="form-group">
+                    <div class="custom-checkbox custom-control">
+                      <input
+                        type="checkbox"
+                        name="remember"
+                        id="remember"
+                        class="custom-control-input"
+                      />
+                      <label for="remember" class="custom-control-label"
+                        >Remember Me</label
+                      >
+                    </div>
+                  </div>
 
-    </div>
+                  <div class="form-group m-0">
+                    <button type="submit" class="btn btn-primary btn-block" onclick="signIn()">
+                      Login
+                    </button>
+                  </div>
+                  <div class="mt-4 text-center">
+                    Don't have an account?
+                    <a href="register.html">Create One</a>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="footer">Copyright &copy; 2021 &mdash; Marshalling@Home</div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-
-    <script src="test.js"></script>
-</body>
-
+    <!--Scripts-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
