--- a/index.html
+++ b/index.html
@@ -1,37 +1,148 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Marshall@Home &mdash; Home</title>
 
-<head>
-    <meta charset="utf-8">
-
-    <title>Marshall@Home</title>
-    <meta name="description" content="Niama">
-    <meta name="author" content="kimak">
-
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
-    <script src="/scripts/index.js"></script>
-    
-    <script src="/scripts/signinlogic.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-</head>
-
-<body onload="signInLogic()">
-    <h1 id="signInBanner"></h1>
-    <div id="logInOutDiv">
-        <button id="logInOrOut">Log In</button>
+    <!--CSS-->
+    <link rel="stylesheet" href="css/index.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body onload="signInLogic()" class="home-page">
+    <div
+      class="
+        side-navbar
+        active-nav
+        d-flex
+        justify-content-between
+        flex-wrap flex-column
+        align-items-center
+      "
+      id="sidebar"
+    >
+      <ul class="nav flex-column text-white w-75">
+        <a href="#" class="nav-link h3 text-white my-2 text-center" id="profileName"></a>
+        <a class="btn btn-primary" id="logInOutDiv">
+          <p id="logInOrOut" class="align-text-center justify-content-center">Log In</p>
+        </a>
     </div>
-    
-    <a href="http://127.0.0.1:5500/profile.html">profile</a>
-    <h1>Something will eventually be here.</h1>
-    <a href="http://127.0.0.1:5500/quiz.html">quiz</a>
-    <div id="app"></div>
+    <div class="my-container active-cont h-100">
+      <nav class="navbar navbar-expand-lg">
+        <a class="btn border-0" id="menu-btn">
+          <i class="bx bx-menu"></i>
+        </a>
+        <div class="container-fluid justify-content-center">
+          <h1 id="signInBanner" class="text-white m-0"></h1>
+        </div>
+      </nav>
+      <section class="text-center">
+        <h2 class="mb-5 mt-5 align-items-center" id="homeHeader"></h2>
 
+        <div class="row">
+          <div class="col-lg-6 mb-4">
+            <div class="card">
+              <div
+                class="bg-image hover-overlay ripple"
+                data-mdb-ripple-color="light"
+              >
+              <!--Need to change this image-->
+                <img
+                  src="https://mdbootstrap.com/img/new/standard/nature/184.jpg"
+                  class="img-fluid"
+                />
+                <a href="http://127.0.0.1:5500/learn.html">
+                  <div
+                    class="mask"
+                    style="background-color: rgba(251, 251, 251, 0.15)"
+                  ></div>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">LEARN</h5>
+                <p class="card-text">
+                  Learn all about the 
+                  fundamentals of airplane <br>
+                  marshalling in this course or
+                  refresh your memory.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 mb-4">
+            <div class="card">
+              <div
+                class="bg-image hover-overlay ripple"
+                data-mdb-ripple-color="light"
+              >
+              <!--Need to change this image-->
+                <img
+                  src="https://mdbootstrap.com/img/new/standard/nature/023.jpg"
+                  class="img-fluid"
+                />
+                <a href="http://127.0.0.1:5500/quiz.html">
+                  <div
+                    class="mask"
+                    style="background-color: rgba(251, 251, 251, 0.15)"
+                  ></div>
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">QUIZ</h5>
+                <p class="card-text">
+                  Are you confident
+                  in your airplane marshalling
+                  knowledge?<br>Test it out in our
+                  very own quiz.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div id="footer" class="bg-light text-lg-start">
+        <div
+          class="text-center p-3"
+          style="background-color: rgba(0, 0, 0, 0.2)"
+        >
+          Copyright &copy; 2021 &mdash; Marshalling@Home
+        </div>
+      </div>
+    </div>
+
+    <!--Scripts-->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.js"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/1b85d509e9.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/scripts/index.js"></script>
+    <script src="/scripts/signinlogic.js"></script>
     <script>
-        signInMessage();
+      signInMessage();
     </script>
-</body>
-
+  </body>
 </html>
