spacing for sidebar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
         align-items-center
       " id="sidebar">
     <ul class="nav flex-column text-white w-75">
-      <a href="#" class="nav-link h3 text-white my-2 text-center" id="profileName"></a>
+      
+      <a class="nav-link h3 text-white my-2 p-5"></a>
+      <a class="nav-link h3 text-white my-2 p-5"></a>
+      <a class="nav-link h3 text-white my-2 p-5"></a>
+      <a class="nav-link h3 text-white my-2 p-5"></a>
+      <a class="nav-link h3 text-white my-2 p-5"></a>
+      <a class="nav-link h3 text-white my-2 p-5"></a>
+      <a class="nav-link h3 text-white my-2 p-5"></a>
+      <a href="profile.html" class="nav-link h3 text-white my-2 text-center" id="profileName"></a>
       <a class="btn btn-primary" id="logInOutDiv">
         <p id="logInOrOut" class="align-text-center justify-content-center">Log In</p>
       </a>
