--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <script src="https://kit.fontawesome.com/1b85d509e9.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="css/index.css" />
+  
+  <link rel="stylesheet" href="css/navbar.css" />
   <script src="/scripts/index.js"></script>
   <script src="/scripts/signinlogic.js"></script>
 </head>
@@ -28,19 +30,19 @@
   <nav class="navbar navbar-expand-lg">
     <div class="container">
       <div class="navbar-brand">
-        <a href="#">
+        <a href="index.html">
           <img class="logo" src="/images/logoicon.png" alt="Marshalling@Home!">
         </a>
       </div>
       <ul class="navbar-nav" id="navbar">
         <li class="nav-item">
-          <a class="nav-link" href="#">Learn</a>
+          <a class="nav-link" href="learn.html">Learn</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Quiz</a>
+          <a class="nav-link" href="quiz.html">Quiz</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Profile</a>
+          <a class="nav-link" href="profile.html">Profile</a>
         </li>
       </ul>
     </div>
