--- a/quiz.html
+++ b/quiz.html
@@ -48,8 +48,12 @@
     <h2>Question number</h2>
     <div id="checkmark"></div>
     <div id="qnBody"></div>
-    <button id="selectAns" onclick="lockQuestion()">select answer</button>
+
+    <div class="col-md-12 text-center">
+      <button id="selectAns d-flex justify-content-center" onclick="lockQuestion()">select answer</button>
+    </div>
   </div>
+
   <script>
     signInLogic();
     hideSidebarOnStart();
