--- a/learn.html
+++ b/learn.html
@@ -15,6 +15,7 @@
   <script src="/scripts/learn.js"></script>
   <script src="/scripts/signinlogic.js"></script>
   <link rel="stylesheet" href="css/navbar.css" />
+  <link rel="stylesheet" href="css/learn.css" />
 </head>
 
 <body>
@@ -39,6 +40,64 @@
       </ul>
     </div>
   </nav>
+
+  <div class="container h-80 mainview shadow">
+    <div class="row h-100">
+      <div class="col-3 sidebar overflow-auto mh-100">
+        
+        <div class="smth shadow">
+          <p class="subjectname text-truncate">something</p>
+        </div>
+
+        <div class="smth shadow">
+          <p class="subjectname text-truncate">somethingsomethingsomethingsomethingsomethingsomething</p>
+        </div>
+
+        <div class="smth shadow">
+          <p class="subjectname text-truncate">something</p>
+        </div>
+
+        <div class="smth shadow">
+          <p class="subjectname text-truncate">something</p>
+        </div>
+
+        <div class="smth shadow">
+          <p class="subjectname text-truncate">something</p>
+        </div>
+
+        <div class="smth shadow">
+          <p class="subjectname text-truncate">something</p>
+        </div>
+
+      </div>
+
+      <div class="col-9 learnview mh-100">
+        <div class="learntab overflow-auto">
+          <h1>navy seals</h1>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+          <p>ligma balls</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
 
 
   <script>
