--- a/learn.html
+++ b/learn.html
@@ -43,36 +43,14 @@
 
   <div class="container h-80 mainview shadow">
     <div class="row h-100">
-      <div class="col-3 sidebar overflow-auto mh-100">
-        
-        <div class="smth shadow">
-          <p class="subjectname text-truncate">something</p>
-        </div>
-
-        <div class="smth shadow">
-          <p class="subjectname text-truncate">somethingsomethingsomethingsomethingsomethingsomething</p>
-        </div>
-
-        <div class="smth shadow">
-          <p class="subjectname text-truncate">something</p>
-        </div>
-
-        <div class="smth shadow">
-          <p class="subjectname text-truncate">something</p>
-        </div>
-
-        <div class="smth shadow">
-          <p class="subjectname text-truncate">something</p>
-        </div>
-
-        <div class="smth shadow">
-          <p class="subjectname text-truncate">something</p>
-        </div>
+      <div class="col-3 sidebar overflow-auto mh-100" id="sidebar">
+        <div class="spinner-border text-secondary" id="loadingSidebar" ></div>
 
       </div>
 
       <div class="col-9 learnview mh-100">
         <div class="learntab overflow-auto">
+          <div class="spinner-border text-secondary"></div>
           <h1>navy seals</h1>
           <p>ligma balls</p>
           <p>ligma balls</p>
@@ -102,6 +80,8 @@
 
   <script>
     signInLogic();
+    //kickstart the api calling
+    getTopics();
   </script>
   <!-- <button id="testNext" onclick="loadNext()">Load Next</button> -->
 
