--- a/learn.html
+++ b/learn.html
@@ -45,32 +45,13 @@
     <div class="row h-100">
       <div class="col-3 sidebar overflow-auto mh-100" id="sidebar">
         <div class="spinner-border text-secondary" id="loadingSidebar" ></div>
-
+        
+        </a>
       </div>
 
       <div class="col-9 learnview mh-100">
-        <div class="learntab overflow-auto">
-          <div class="spinner-border text-secondary"></div>
-          <h1>navy seals</h1>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
-          <p>ligma balls</p>
+        <div class="learntab overflow-auto" id="article">
+          <div class="spinner-border text-secondary" id="loadingArticle"></div>
         </div>
       </div>
 
