--- a/learn.html
+++ b/learn.html
@@ -44,17 +44,19 @@
   <div class="container h-80 mainview shadow">
     <div class="row h-100">
       <div class="col-3 sidebar overflow-auto mh-100" id="sidebar">
-        <div class="spinner-border text-secondary" id="loadingSidebar" ></div>
-        
+        <div class="spinner-border text-secondary" id="loadingSidebar"></div>
+
         </a>
       </div>
 
-      <div class="col-9 learnview mh-100">
-        <div class="learntab overflow-auto shadow" id="article">
-          <div class="spinner-border text-secondary" id="loadingArticle"></div>
+      <div class="col-9 learnview">
 
-          <h1>Click on an article to get started!</h1>
-        </div>
+          <div class="learntab overflow-auto shadow" id="article">
+            <div class="spinner-border text-secondary" id="loadingArticle"></div>
+
+            <h1>Click on an article to get started!</h1>
+          </div>
+
       </div>
 
     </div>
