--- a/profile.html
+++ b/profile.html
@@ -52,10 +52,11 @@
         </div>
     </nav>
 
-    <div class=container>
+    <div class="container h-80">
 
 
-        <div class="row h-100">
+        <div class="row">
+
             <div class="col-4 sidebar mh-100" id="sidebar">
 
                 <div class="profileCard shadow">
@@ -65,8 +66,8 @@
                 </div>
             </div>
 
-            <div class="col-8 learnview mh-100">
-                <div class="historyCard overflow-auto shadow">
+            <div class="col-8 historyView">
+                <div class="historyCard shadow overflow-auto">
                     <h1>Quiz History</h1>
                     <div class="spinner-border text-secondary" id="loadingHistory"></div>
                     <div id="quizHistoryTable">
