security with jwt on api

--- a/profile.html
+++ b/profile.html
@@ -68,12 +68,12 @@
                         <label for="username">Name:</label>
                         <input id="username" type="username" class="form-control" name="username" value=""/>
                         <label for="email">Email Address:</label>
-                        <input id="email" type="email" class="form-control" name="email" />
+                        <input id="email" type="email" class="form-control" name="email" readonly/>
                         <label for="profilePicture">Profile Picture Link:</label>
                         <input id="profilePicture" type="profilePicture" class="form-control" name="profilePicture" />
                     </div>
                     <div>
-                        <h1 id="updateProfile" class="btn btn-outline-warning" onclick="logOut()">Update Profile</h1>
+                        <h1 id="updateProfile" class="btn btn-outline-warning" onclick="updateProfile()">Update Profile</h1>
                     </div>
                     <h1 id="logOut" class="btn btn-outline-warning" onclick="logOut()">Log Out</h1>
                 </div>
