--- a/profile.html
+++ b/profile.html
@@ -57,13 +57,16 @@
 
         <div class="row">
 
-            <div class="col-4 sidebar mh-100" id="sidebar">
+            <div class="col-md-12 col-xl-4 sidebar mh-100" id="sidebar">
 
                 <div class="profileCard shadow">
                     <div class="spinner-border text-secondary" id="loadingProfile"></div>
                     <h1 id="nameOfUser"></h1>
-                    <img src="https://upload.wikimedia.org/wikipedia/en/4/46/Today_Is_A_Beautiful_Day_album_cover.png"
-                        class="mx-auto d-block img-fluid profilePicture" alt="...">
+                    <div class="profilePicDiv">
+                        <img id="pfp"
+                            src="https://avatars.githubusercontent.com/u/34031402?v=4"
+                            class="mx-auto d-block img-fluid img-thumbnail profilePicture" alt="...">
+                    </div>
                     <div class="form-group">
                         <label for="username">Name:</label>
                         <input id="username" type="username" class="form-control" name="username" value="" />
@@ -80,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="col-8 historyView">
+            <div class="col-md-12 col-xl-8 historyView">
                 <div class="historyCard shadow overflow-auto">
                     <h1>Quiz History</h1>
                     <div class="spinner-border text-secondary" id="loadingHistory"></div>
