Edited Title and images

--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Marshall@Home</title>
+    <title>Marshall@Home &mdash; Profile</title>
     <meta name="description" content="Niama">
     <meta name="author" content="kimak">
 
