--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="card shadow">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                 <!--Need to change this image-->
-                <img src="https://mdbootstrap.com/img/new/standard/nature/184.jpg" class="img-fluid" />
-                <a href="http://127.0.0.1:5500/learn.html">
+                <img src="images/learning-image.jpg" class="img-fluid" />
+                <a href="./learn.html">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
                 </a>
               </div>
@@ -80,8 +80,8 @@
             <div class="card shadow">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                 <!--Need to change this image-->
-                <img src="https://mdbootstrap.com/img/new/standard/nature/023.jpg" class="img-fluid" />
-                <a href="http://127.0.0.1:5500/quiz.html">
+                <img src="images/quiz-image.jpg" class="img-fluid" />
+                <a href="./quiz.html">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15)"></div>
                 </a>
               </div>
@@ -104,7 +104,6 @@
 
     <script>
       signInMessage();
-      hideSidebarOnStart();
     </script>
 </body>
 
