view students html

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="css/navbar.css" />
   <script src="/scripts/index.js"></script>
   <script src="/scripts/signinlogic.js"></script>
+  <script src="/scripts/navbar.js"></script>
 </head>
 
 <body onload="signInLogic()" class="home-page">
@@ -104,6 +105,7 @@
 
     <script>
       signInMessage();
+      lecturerNavbar();
     </script>
 </body>
 
