--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/profile.css">
     <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
     <script src="/scripts/profile.js"></script>
-
+    <script src="/scripts/navbar.js"></script>
     <script src="/scripts/signinlogic.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -102,6 +102,7 @@
         <script>
             getHistory();
             getUserInfo();
+            lecturerNavbar();
         </script>
 </body>
 
