--- a/quiz.html
+++ b/quiz.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="css/quiz.css" />
   <link rel="stylesheet" href="css/navbar.css" />
+  <script src="/scripts/navbar.js"></script>
 </head>
 
 <body onload="getData()">
@@ -69,7 +70,7 @@
   <div id="checkmark"></div>
   <script>
     signInLogic();
-    hideSidebarOnStart();
+    lecturerNavbar();
   </script>
   <!-- <button id="testNext" onclick="loadNext()">Load Next</button> -->
 
