--- a/article.html
+++ b/article.html
@@ -14,6 +14,8 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css" rel="stylesheet" />
   <script src="/scripts/learn.js"></script>
   <script src="/scripts/signinlogic.js"></script>
+  
+  <script src="/scripts/navbar.js"></script>
   <link rel="stylesheet" href="css/navbar.css" />
 </head>
 
@@ -43,6 +45,7 @@
 
   <script>
     signInLogic();
+    lecturerNavbar();
   </script>
   <!-- <button id="testNext" onclick="loadNext()">Load Next</button> -->
 
