--- a/students.html
+++ b/students.html
@@ -5,21 +5,28 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Marshall@Home &mdash; Learn</title>
+  <title>Marshall@Home &mdash; Home</title>
 
   <!--CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.css" rel="stylesheet" />
-  <script src="/scripts/learn.js"></script>
-  <script src="/scripts/signinlogic.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.5.0/mdb.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/reefjs@8/dist/reef.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://kit.fontawesome.com/1b85d509e9.js" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="css/students.css" />
+  
   <link rel="stylesheet" href="css/navbar.css" />
-  <link rel="stylesheet" href="css/learn.css" />
+  <script src="/scripts/index.js"></script>
+  <script src="/scripts/signinlogic.js"></script>
   <script src="/scripts/navbar.js"></script>
 </head>
 
-<body>
+<body onload="signInLogic()" class="home-page">
 
   <nav class="navbar navbar-expand-lg">
     <div class="container">
@@ -42,36 +49,16 @@
     </div>
   </nav>
 
-  <div class="container h-80 mainview shadow">
-    <div class="row h-100">
-      <div class="col-3 sidebar overflow-auto mh-100" id="sidebar">
-        <div class="spinner-border text-secondary" id="loadingSidebar"></div>
+  
+  <div class="container h-100 shadow mainView">
 
-        </a>
-      </div>
-
-      <div class="col-9 learnview">
-
-          <div class="learntab overflow-auto shadow" id="article">
-            <div class="spinner-border text-secondary" id="loadingArticle"></div>
-
-            <h1>Click on an article to get started!</h1>
-          </div>
-
-      </div>
-
-    </div>
   </div>
 
+    <!--Scripts-->
 
-  <script>
-    signInLogic();
-
-    lecturerNavbar();
-    //kickstart the api calling
-    getTopics();
-  </script>
-  <!-- <button id="testNext" onclick="loadNext()">Load Next</button> -->
+    <script>
+      lecturerNavbar();
+    </script>
 </body>
 
 </html>
