My students API

--- a/mystudents.html
+++ b/mystudents.html
@@ -85,9 +85,8 @@
     <!--Scripts-->
 
     <script>
-        $('#sortTable').DataTable();
         lecturerNavbar();
-        getAllStudents();
+        getMyStudents()
     </script>
 </body>
 
