My students page

--- a/mystudents.html
+++ b/mystudents.html
@@ -89,7 +89,8 @@
                             <th style="width:5%">ID</th>
                             <th>Username</th>
                             <th>Email</th>
-                            <th style="width:20%"></th>
+                            <th>Quizzes Done</th>
+                            <th>Average Percentage</th>
                         </tr>
                     </thead>
                     <tbody id="allStudentsTableBody">
